// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericOption NumericOption renders as expected with default requirement 1`] = `
<div
  className="is-type-exact"
>
  <label
    className="select requirement"
  >
    Answer Type
    <div
      className="more-info-tooltip"
    >
      <div
        className="obojobo-draft--chunks--numeric-assessment--input-more-info"
      >
        <div
          className="obojobo-draft--components--more-info-button is-default-label is-mode-hidden"
        >
          <button
            aria-label="Click for some examples of how to input your answer"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            type="button"
          >
            ?
          </button>
        </div>
      </div>
    </div>
    <select
      className="select-item"
      name="requirement"
    >
      <option>
        Exact answer
      </option>
      <option>
        Margin of error
      </option>
      <option>
        Within a range
      </option>
    </select>
  </label>
  <label
    className="input answer"
  >
    Answer
    <input
      autoComplete="off"
      className="input-item"
      contentEditable={false}
      name="answer"
      onBlur={[Function]}
      onChange={[Function]}
      value=""
    />
  </label>
</div>
`;

exports[`NumericOption NumericOption renders as expected with requirement of \`exact\` 1`] = `
<div
  className="is-type-exact"
>
  <label
    className="select requirement"
  >
    Answer Type
    <div
      className="more-info-tooltip"
    >
      <div
        className="obojobo-draft--chunks--numeric-assessment--input-more-info"
      >
        <div
          className="obojobo-draft--components--more-info-button is-default-label is-mode-hidden"
        >
          <button
            aria-label="Click for some examples of how to input your answer"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            type="button"
          >
            ?
          </button>
        </div>
      </div>
    </div>
    <select
      className="select-item"
      name="requirement"
      value="Exact answer"
    >
      <option>
        Exact answer
      </option>
      <option>
        Margin of error
      </option>
      <option>
        Within a range
      </option>
    </select>
  </label>
  <label
    className="input answer"
  >
    Answer
    <input
      autoComplete="off"
      className="input-item"
      contentEditable={false}
      name="answer"
      onBlur={[Function]}
      onChange={[Function]}
      value=""
    />
  </label>
</div>
`;

exports[`NumericOption NumericOption renders as expected with requirement of \`margin\` 1`] = `
<div
  className="is-type-margin"
>
  <label
    className="select requirement"
  >
    Answer Type
    <div
      className="more-info-tooltip"
    >
      <div
        className="obojobo-draft--chunks--numeric-assessment--input-more-info"
      >
        <div
          className="obojobo-draft--components--more-info-button is-default-label is-mode-hidden"
        >
          <button
            aria-label="Click for some examples of how to input your answer"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            type="button"
          >
            ?
          </button>
        </div>
      </div>
    </div>
    <select
      className="select-item"
      name="requirement"
      value="Margin of error"
    >
      <option>
        Exact answer
      </option>
      <option>
        Margin of error
      </option>
      <option>
        Within a range
      </option>
    </select>
  </label>
  <label
    className="input answer"
  >
    Answer
    <input
      autoComplete="off"
      className="input-item"
      contentEditable={false}
      name="answer"
      onBlur={[Function]}
      onChange={[Function]}
      value=""
    />
  </label>
  <label
    className="select margin-type"
  >
    Error Type
    <select
      className="select-item"
      name="margin-type"
    >
      <option>
        Percent
      </option>
      <option>
        Absolute
      </option>
    </select>
  </label>
  <label
    className="input margin-value"
  >
    ± Error
    <input
      autoComplete="off"
      className="input-item"
      contentEditable={false}
      name="margin"
      onBlur={[Function]}
      onChange={[Function]}
      value=""
    />
  </label>
</div>
`;

exports[`NumericOption NumericOption renders as expected with requirement of \`range\` 1`] = `
<div
  className="is-type-range"
>
  <label
    className="select requirement"
  >
    Answer Type
    <div
      className="more-info-tooltip"
    >
      <div
        className="obojobo-draft--chunks--numeric-assessment--input-more-info"
      >
        <div
          className="obojobo-draft--components--more-info-button is-default-label is-mode-hidden"
        >
          <button
            aria-label="Click for some examples of how to input your answer"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            type="button"
          >
            ?
          </button>
        </div>
      </div>
    </div>
    <select
      className="select-item"
      name="requirement"
      value="Within a range"
    >
      <option>
        Exact answer
      </option>
      <option>
        Margin of error
      </option>
      <option>
        Within a range
      </option>
    </select>
  </label>
  <label
    className="input start"
  >
    Start
    <input
      autoComplete="off"
      className="input-item"
      contentEditable={false}
      name="start"
      onBlur={[Function]}
      onChange={[Function]}
      value=""
    />
  </label>
  <label
    className="input end"
  >
    End
    <input
      autoComplete="off"
      className="input-item"
      contentEditable={false}
      name="end"
      onBlur={[Function]}
      onChange={[Function]}
      value=""
    />
  </label>
</div>
`;
